[metadata]
name = tqec
url = https://github.com/QCHackers/tqec
author = TQEC community
author_email = tqec-design-automation@googlegroups.com
description = Framework for Topological Quantum Error Correction
long_description = file: README.md
long_description_content_type = text/markdown; variant=GFM
version = attr: tqec._version.__version__
license = Apache 2.0 Software License
license_files = LICENSE
keywords = topological quantum error correction 
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: Apache Software License
    Natural Language :: English
    Operating System :: Microsoft :: Windows
    Operating System :: MacOS
    Operating System :: POSIX :: Linux
    Programming Language :: JavaScript
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13
    Topic :: Scientific/Engineering
    Topic :: Software Development :: Libraries
    Topic :: Software Development :: User Interfaces
    Topic :: Utilities
    Typing :: Typed

[options]
packages = find_namespace:
package_dir=
    = src
install_requires = 
    # See https://github.com/pypa/setuptools/issues/1951 for explanation
    # about why we prefer duplicating the list here.
    matplotlib
    numpy
    networkx
    cirq-core
    stim
    stimcirq
    Flask==3.0.0
    flask_cors==3.0.10

[options.packages.find]
where = src
exclude = tests*

[options.extras_require]
testing = 
    pytest
    pytest-cov
dev = 
    sinter
    pymatching
    jupyterlab
    %(testing)s
all =
    %(dev)s

#[options.entry_points]
#console_scripts =
    