[metadata]
name = tqec
version = attr: tqec.VERSION
author = TQEC working group
# author_email = 
description = An helper package to create surface codes.
long_description = file: README.md, LICENSE
keywords = quantum error correction
license_files = LICENSE
classifiers =
    Programming Language :: Python :: 3

[options]
zip_safe = False
include_package_data = True
package_dir=
    =src
packages = find:
python_requires = >=3.10
install_requires =
    numpy
    networkx
    sympy
    cirq
    stim
    stimcirq
    sinter
    pymatching
    
[options.packages.find]
where = src
